org/kermeta/language/org.kermeta.language.checker/src/test/resources/resolved/invalid/GenericBounds/GenericBounds_op_param/project.kp
resource library_standard ="platform:/plugin/org.kermeta.language.library.standard" alternative "mvn:org.kermeta.language/language.library.standard/2.0.99-SNAPSHOT"
importProject library_standard
project GenericBounds_op_param {
	import "${project.baseUri}/003_GenericBounds_op_param.kmt"
}
